<resources>
    <string name="app_name">MDT homework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="transfer">Transfer</string>
    <string name="amount">Amount</string>
    <string name="you_have">You have</string>
    <string name="account_no">Account No</string>
    <string name="account_holder">Account Holder</string>
    <string name="your_transaction_history">Your transaction history</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="description">Description</string>
    <string name="payee">Payee</string>
    <string name="logout">Logout</string>
</resources>