<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/boxView"
            android:layout_width="397dp"
            android:layout_height="230dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/box_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="17sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:padding="15dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/youHave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:paddingStart="30dp"
            android:text="@string/you_have"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bankBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="SGD "
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/youHave" />

        <TextView
            android:id="@+id/accountNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/account_no"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bankBalance" />

        <TextView
            android:id="@+id/accountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountNo" />

        <TextView
            android:id="@+id/accountHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:text="@string/account_holder"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountNumber" />

        <TextView
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accountHolder" />

        <View
            android:id="@+id/boxViewHistory"
            android:layout_width="349dp"
            android:layout_height="250dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/box_background"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="@id/transactionHistory"
            app:layout_constraintTop_toBottomOf="@id/transactionHistory" />

        <TextView
            android:id="@+id/transactionHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/your_transaction_history"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transactionsRecyclerView"
            android:layout_width="379dp"
            android:layout_height="197dp"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="@id/boxViewHistory"
            app:layout_constraintTop_toBottomOf="@id/transactionHistory" />

        <Button
            android:id="@+id/buttonMakeTransfer"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="32dp"
            android:textSize="17sp"
            android:text="@string/make_transfer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
